[gd_scene load_steps=4 format=3 uid="uid://s63433kyi8ee"]

[ext_resource type="Texture2D" uid="uid://cvu1d422dlukv" path="res://assets/chat.png" id="1_d4ef8"]
[ext_resource type="Texture2D" uid="uid://dws8jx14wutet" path="res://assets/Abutton.png" id="1_e5oti"]
[ext_resource type="Script" uid="uid://ybm2dmi5axe2" path="res://scripts/story_start.gd" id="1_eedmx"]

[node name="story_start" type="Node2D"]
script = ExtResource("1_eedmx")

[node name="Option A" type="TextureButton" parent="."]
offset_left = 48.0
offset_top = 1412.0
offset_right = 441.0
offset_bottom = 1486.0
scale = Vector2(2.47917, 1.8075)
texture_normal = ExtResource("1_e5oti")

[node name="Option B" type="TextureButton" parent="."]
offset_left = -9.0
offset_top = 1574.0
offset_right = 384.0
offset_bottom = 1648.0
scale = Vector2(2.82381, 2.34793)
texture_normal = ExtResource("1_e5oti")

[node name="Option C" type="TextureButton" parent="."]
offset_left = -12.0
offset_top = 1747.0
offset_right = 381.0
offset_bottom = 1821.0
scale = Vector2(2.79746, 2.40333)
texture_normal = ExtResource("1_e5oti")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(540, 973)
scale = Vector2(1.47193, 1.20082)
texture = ExtResource("1_d4ef8")

[connection signal="pressed" from="Option A" to="." method="_on_option_a_pressed"]
[connection signal="pressed" from="Option B" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="Option C" to="." method="_on_option_c_pressed"]
